--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Google</title>
     <link rel="icon" type="icon" href="https://www.google.com/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mobilestyle.css">
     <script src="https://kit.fontawesome.com/b69ee90ce9.js" crossorigin="anonymous"></script>
 </head>
 <body>
