--- a/index.html
+++ b/index.html
@@ -11,15 +11,32 @@
 </head>
 <body>
     <div class="main-container" id="main-container">
+        <header class="responsive-div">
+            <!-- LEFT NAV FOR RESPONDIVE DEVICE -->
+            <div class="left-nav">
+                <ul class="left-nav">
+                <li><a href="https://labs.google.com/search?source=hp&authuser=0"><i class="fa-solid fa-flask"></i></a></li>
+                <li><a  target="_blank" href="https://mail.google.com/mail/u/0/?ogbl">ALL</a></li>
+                <li><a target="_blank" href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">IMAGES</a></li>
+                </ul>
+            </div>
+            <!-- RIGHT NAV FOR RESPONDIVE DEVICE -->
+            <div class="right-nav">
+                <ul>
+                    <li><a href=""><i class="fa-solid fa-list-ul"></i></a></li>
+                    <li><a class="a-logo" href=""><img src="https://lh3.googleusercontent.com/fife/ALs6j_HqNAC9_BEvR1CzsiydK2YeDs9zpP-Z6cXj-FpMTRQrqdnIJ_bZtuYOIc0h_BKD7y6B3uKqC5lWXu0KmxNARyVAQhFFgpV1HtPpR-oMzjIAfdVGvfGmhTXXtuAZcHuDrmJ92F3i8x3jRkpy5B1ClsmGt1Yx1mmD8xOlZTiWQ2ebZr_1H1pm8Qr2uiUiMVYR0oL94k_JoT0y9Ot5yqkBTe8GQyOv8hYvhL1XReLnouP-j97t1Z9rdNaiNEQJ29RUcsbTkaCbF9LzpyyOjPvrT9oU1fpRP7_pYpw8xj4xy6I5jPc_V3E-q8lS3lcZLwR_uQ821rSOlpx6sVnugIjDIoUVNyDfNlSw_cTyoiC9wx26AjyU_-KV5lErotsy7JolMTFKmesJQZydjPuX-sFGMieQOJ9juaSbqHT1ryky5ly0JLkXIcdDda74oHP7o5AzFmBV7AZWWDwmNbDwUSzR-Vqvtie2dinPNdY6ikfBzxrhsrJhsEsd7SxJnowcm-ueq4EYWIAog7mwu_v3Pj1Gv5wKeql-GAOaQM1F520QAxpk8gM4TKfbR8JW_w8clFqcR9n47QSz8enz2nb2XdKcGjYubpLEDZVZbnjQuckLWk7gg7wS4MkjrC_g8RVv-THUEUygV4kVv3NwZ61R2nEw9vtwUGRtHIoKJjKCw0DiLaUDcKHM8I1gqODLJMTAC5ooY9Ds8ykcoziBe8Mnk0ot4vYZ2xFOX0fy30uBEWO6Bu05_VAKhonHaqjJ-N4i1P0i2BiILgIPbbKDaRfDAJI7BxXD8mBbcVuKk-e5E1_oe9njCqs0cuapvZVn-Lu6yBNKzS0M3XDUOjnKkgGTTusHcJvBwTPW5QW3lhrF87whikN9MPLRYPhqE-70FcDLwNcDwAAg5Pp7hfhM0ojS3GliLbbYPwomjBqi0MQwc0ldwpzCHky052d8rSSxiGmyrrOyERPn401Y82LyQVQIzfbqwDhr30HuBG7BJTxRLm46iNfKo7K_3fOMsm2e-GMsIcw0h5_wIx0Pz9IXRN8iI3Bty7_0RQXOrXP4_3j_Db2vcuBpwP3jjUUWJ1beyhnc4esPDFM1BPs0MW4Px2BYQtDEgnTr7C19gxlelCjK37WE4m0LjvPj0nTSRRhTg2_quvg8NnQkUO0A8x9lEm8IcYeU4prlM14cUMnsEoRzhhgoTUYwHP7yQAm8pkh1pVxRuPHspa54PT5ksM-0l2KeNYcA6rgjEE0V17LuHT_FjWtOg7D766AxJgivO7VcspITwOS3g3w4aHX8snuG-CaQo8T2rjDPiSeAyETJ2Wot8mmARsScSocOWHgpKAiXJLczJb0g4dIMvj4wnzpMr-Y9zD4uEGXqKdg72rKRcPsJ4g4kduuYNgWdsJsBfXJ05XKG1JpRwfjx4kAscNzTU6lEUtV7WbQmW0bIFdbdc7r2vQ=s64-c" alt=""></a>                </li>
+
+                </ul>
+            </div>
+        </header>
         <header>
             <ul>
                 <li><a target="_blank" href="https://mail.google.com/mail/u/0/?ogbl">Gmail</a></li>
                 <li><a target="_blank" href="https://www.google.com/imghp?hl=en&authuser=0&ogbl">Images</a></li>
-                <a href="https://labs.google.com/search?source=hp&authuser=0"><i class="fa-solid fa-flask"></i></a>
-                <a href=""><i class="fa-solid fa-list-ul"></i></a>
-                <a class="a-logo" href=""><img src="https://lh3.googleusercontent.com/fife/ALs6j_HqNAC9_BEvR1CzsiydK2YeDs9zpP-Z6cXj-FpMTRQrqdnIJ_bZtuYOIc0h_BKD7y6B3uKqC5lWXu0KmxNARyVAQhFFgpV1HtPpR-oMzjIAfdVGvfGmhTXXtuAZcHuDrmJ92F3i8x3jRkpy5B1ClsmGt1Yx1mmD8xOlZTiWQ2ebZr_1H1pm8Qr2uiUiMVYR0oL94k_JoT0y9Ot5yqkBTe8GQyOv8hYvhL1XReLnouP-j97t1Z9rdNaiNEQJ29RUcsbTkaCbF9LzpyyOjPvrT9oU1fpRP7_pYpw8xj4xy6I5jPc_V3E-q8lS3lcZLwR_uQ821rSOlpx6sVnugIjDIoUVNyDfNlSw_cTyoiC9wx26AjyU_-KV5lErotsy7JolMTFKmesJQZydjPuX-sFGMieQOJ9juaSbqHT1ryky5ly0JLkXIcdDda74oHP7o5AzFmBV7AZWWDwmNbDwUSzR-Vqvtie2dinPNdY6ikfBzxrhsrJhsEsd7SxJnowcm-ueq4EYWIAog7mwu_v3Pj1Gv5wKeql-GAOaQM1F520QAxpk8gM4TKfbR8JW_w8clFqcR9n47QSz8enz2nb2XdKcGjYubpLEDZVZbnjQuckLWk7gg7wS4MkjrC_g8RVv-THUEUygV4kVv3NwZ61R2nEw9vtwUGRtHIoKJjKCw0DiLaUDcKHM8I1gqODLJMTAC5ooY9Ds8ykcoziBe8Mnk0ot4vYZ2xFOX0fy30uBEWO6Bu05_VAKhonHaqjJ-N4i1P0i2BiILgIPbbKDaRfDAJI7BxXD8mBbcVuKk-e5E1_oe9njCqs0cuapvZVn-Lu6yBNKzS0M3XDUOjnKkgGTTusHcJvBwTPW5QW3lhrF87whikN9MPLRYPhqE-70FcDLwNcDwAAg5Pp7hfhM0ojS3GliLbbYPwomjBqi0MQwc0ldwpzCHky052d8rSSxiGmyrrOyERPn401Y82LyQVQIzfbqwDhr30HuBG7BJTxRLm46iNfKo7K_3fOMsm2e-GMsIcw0h5_wIx0Pz9IXRN8iI3Bty7_0RQXOrXP4_3j_Db2vcuBpwP3jjUUWJ1beyhnc4esPDFM1BPs0MW4Px2BYQtDEgnTr7C19gxlelCjK37WE4m0LjvPj0nTSRRhTg2_quvg8NnQkUO0A8x9lEm8IcYeU4prlM14cUMnsEoRzhhgoTUYwHP7yQAm8pkh1pVxRuPHspa54PT5ksM-0l2KeNYcA6rgjEE0V17LuHT_FjWtOg7D766AxJgivO7VcspITwOS3g3w4aHX8snuG-CaQo8T2rjDPiSeAyETJ2Wot8mmARsScSocOWHgpKAiXJLczJb0g4dIMvj4wnzpMr-Y9zD4uEGXqKdg72rKRcPsJ4g4kduuYNgWdsJsBfXJ05XKG1JpRwfjx4kAscNzTU6lEUtV7WbQmW0bIFdbdc7r2vQ=s64-c" alt=""></a>
+                <li><a class="nav-icons" href="https://labs.google.com/search?source=hp&authuser=0"><i class="fa-solid fa-flask"></i></a></li>
+                <li><a class="nav-icons" href=""><i class="fa-solid fa-list-ul"></i></a></li>
+                <li><a class="nav-icons" class="a-logo" href=""><img src="https://lh3.googleusercontent.com/fife/ALs6j_HqNAC9_BEvR1CzsiydK2YeDs9zpP-Z6cXj-FpMTRQrqdnIJ_bZtuYOIc0h_BKD7y6B3uKqC5lWXu0KmxNARyVAQhFFgpV1HtPpR-oMzjIAfdVGvfGmhTXXtuAZcHuDrmJ92F3i8x3jRkpy5B1ClsmGt1Yx1mmD8xOlZTiWQ2ebZr_1H1pm8Qr2uiUiMVYR0oL94k_JoT0y9Ot5yqkBTe8GQyOv8hYvhL1XReLnouP-j97t1Z9rdNaiNEQJ29RUcsbTkaCbF9LzpyyOjPvrT9oU1fpRP7_pYpw8xj4xy6I5jPc_V3E-q8lS3lcZLwR_uQ821rSOlpx6sVnugIjDIoUVNyDfNlSw_cTyoiC9wx26AjyU_-KV5lErotsy7JolMTFKmesJQZydjPuX-sFGMieQOJ9juaSbqHT1ryky5ly0JLkXIcdDda74oHP7o5AzFmBV7AZWWDwmNbDwUSzR-Vqvtie2dinPNdY6ikfBzxrhsrJhsEsd7SxJnowcm-ueq4EYWIAog7mwu_v3Pj1Gv5wKeql-GAOaQM1F520QAxpk8gM4TKfbR8JW_w8clFqcR9n47QSz8enz2nb2XdKcGjYubpLEDZVZbnjQuckLWk7gg7wS4MkjrC_g8RVv-THUEUygV4kVv3NwZ61R2nEw9vtwUGRtHIoKJjKCw0DiLaUDcKHM8I1gqODLJMTAC5ooY9Ds8ykcoziBe8Mnk0ot4vYZ2xFOX0fy30uBEWO6Bu05_VAKhonHaqjJ-N4i1P0i2BiILgIPbbKDaRfDAJI7BxXD8mBbcVuKk-e5E1_oe9njCqs0cuapvZVn-Lu6yBNKzS0M3XDUOjnKkgGTTusHcJvBwTPW5QW3lhrF87whikN9MPLRYPhqE-70FcDLwNcDwAAg5Pp7hfhM0ojS3GliLbbYPwomjBqi0MQwc0ldwpzCHky052d8rSSxiGmyrrOyERPn401Y82LyQVQIzfbqwDhr30HuBG7BJTxRLm46iNfKo7K_3fOMsm2e-GMsIcw0h5_wIx0Pz9IXRN8iI3Bty7_0RQXOrXP4_3j_Db2vcuBpwP3jjUUWJ1beyhnc4esPDFM1BPs0MW4Px2BYQtDEgnTr7C19gxlelCjK37WE4m0LjvPj0nTSRRhTg2_quvg8NnQkUO0A8x9lEm8IcYeU4prlM14cUMnsEoRzhhgoTUYwHP7yQAm8pkh1pVxRuPHspa54PT5ksM-0l2KeNYcA6rgjEE0V17LuHT_FjWtOg7D766AxJgivO7VcspITwOS3g3w4aHX8snuG-CaQo8T2rjDPiSeAyETJ2Wot8mmARsScSocOWHgpKAiXJLczJb0g4dIMvj4wnzpMr-Y9zD4uEGXqKdg72rKRcPsJ4g4kduuYNgWdsJsBfXJ05XKG1JpRwfjx4kAscNzTU6lEUtV7WbQmW0bIFdbdc7r2vQ=s64-c" alt=""></a>                </li>
             </ul>
-           </nav>
         </header>
         <div class="all-data">
             <div class="center-div">
@@ -49,6 +66,37 @@
                     <a href="">اردو</a>
                 </div>
             </div>
+            <div class="trending">
+                <div class="h-trend">
+                    <span>Trending searches</span>
+                    <i class="fa-solid fa-ellipsis-vertical"></i>
+                </div>
+                <div class="t1">
+                    <i class="fa-solid fa-arrow-trend-up"></i>
+                    <span>eliran mizrahi idf</span>
+                </div>
+                <hr>
+                <div class="t1">
+                    <i class="fa-solid fa-arrow-trend-up"></i>
+                    <span>gold Price</span>
+                </div>
+                <hr>
+                <div class="t1">
+                    <i class="fa-solid fa-arrow-trend-up"></i>
+                    <span>mumbai rains</span>
+                </div>
+                <hr>
+                <div class="t1">
+                    <i class="fa-solid fa-arrow-trend-up"></i>
+                    <span>israeli war cabinet</span>
+                </div>
+                <hr>
+                <div class="t1">
+                    <i class="fa-solid fa-arrow-trend-up"></i>
+                    <span>mumbai airports</span>
+                </div>
+                <hr>
+            </div>
         </div>
         <footer>
             <div class="text1">
@@ -66,6 +114,20 @@
                     <a href="">Privacy</a>
                     <a href="">Terms</a>
                     <a href="">Settings</a>
+                </div>
+            </div>
+            <!-- RESPONSIVE FOOTER  -->
+            <div class="text2" id="res-text2">
+                <div class="lefttext" id="lefttext">
+                    <a href="">Dark theme: off</a>
+                    <a href="">Setting</a>
+                    <a href="">Privacy</a>
+                    <a href="">Terms</a>
+                </div>
+                <div class="righttext" id="righttext">
+                    <a href="">Advertising</a>
+                    <a href="">Business</a>
+                    <a href="">About</a>
                 </div>
             </div>
         </footer>
